# Jobhuntin

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yaml  0.14.1  AGENTS.md  AI_AUDIT_SUMMARY.md  AI_INTEGRATION_AUDIT.md  AI_MATCHING_ANALYSIS.md  ALL_FIXES_COMPLETE.md  ANALYTICS_AUDIT.md  ANALYTICS_AUDIT_SUMMARY.md  ANTIPATTERNS_DETAILED_REPORT.md  ANTIPATTERNS_FIXES.md  ANTIPATTERNS_SUMMARY.md  API_BUILD_FIX_SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_SUMMARY.md  BACKEND_ARCHITECTURE_AUDIT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_AUDIT_COMPLETION_SUMMARY.md  COMPREHENSIVE_E2E_TEST_FINAL_REPORT.md  COMPREHENSIVE_PRODUCTION_READINESS_AUDIT.md  COMPREHENSIVE_TASK_LIST.md  CONSOLE_ACCESS_ISSUE.md  CONSOLE_ERRORS_COMPLETE.md  CONSOLE_ERRORS_DETAILED.md  CONSOLE_ERRORS_FINAL_REPORT.md  CONSOLE_ERRORS_REPORT.md  CONSOLE_ERRORS_SUMMARY.md  CONSOLE_VERIFICATION_COMPLETE.md  CONSOLE_VERIFICATION_FINAL.md  CONSOLE_VERIFICATION_REPORT.md  CONSOLE_VERIFICATION_SUMMARY.md  CONTRIBUTING.md  CORE_FEATURES_AUDIT_REPORT.md  CRITICAL_FIX_REQUIRED.md  (+357 more)
.github/: dependabot.yml
.kilocode/: memory.md
alembic/: env.py
analysis_output/: bandit-report.json  bandit.json  findings-so-far.md  flake8-report.txt  flake8.txt  report-20260222.md  semgrep.json
api/: __init__.py  admin.py  analytics.py  auth.py  billing.py  bulk.py  developer.py  export.py  growth.py  main.py  marketplace.py  og.py  sso.py  user.py
api-v2/: router.py
api_v2/: __init__.py  auth.py  openapi.yaml  router.py  webhooks.py
apps/: README.md  __init__.py
audit-reports/: security-audit_20260315_090139.json
backend/: README.md  __init__.py  domain  llm
blueprints/: __init__.py
debug-setup/: install-tools.sh  run-scans.sh  sonar-project.properties
design-review/: DESIGN_REVIEW_AND_RECOMMENDATIONS.md
docker/: sonarqube.yml
docs/: API_VERSIONING.md  ARCHITECTURE.md  AUDIT_ERRORS_REVIEW.md  AUDIT_FINDINGS_2025_03.md  AUDIT_REPORT_FRONTEND_ADMIN_2025_03.md  AUDIT_TOOLS.md  AUTH_BILLING_WORKER_AUDIT_FINDINGS.md  CODE_REVIEW_SPRINT_1-3.md  CSRF_AUDIT_REPORT.md  DASHBOARD_API_AUDIT_FINDINGS.md  DATABASE_VERIFICATION_CHECKLIST.md  DEEP_AUDIT_SPRINT_PLAN.md  DEVELOPER_HANDOFF_PROMPT.md  DEVELOPMENT.md  EMAIL_JOBSEARCH_PRIVACY_AUDIT_FINDINGS.md  ERROR_HANDLING.md  INDEX.md  INVESTORS.md  JOBSPY_ADVANCED_IMPLEMENTATION_PLAN.md  JOBSPY_AUDIT_FINDINGS.md  JOB_APPLICATION_FLOW_AND_LOGIN.md  JOB_APPLICATION_FLOW_AUDIT_REPORT.md  JOB_APPLICATION_SELF_HEALING_IMPLEMENTATION.md  MIGRATION_CONFLICT_REPORT.md  MIGRATION_GUIDES.md  ONBOARDING_AUDIT_FINDINGS.md  ONBOARDING_E2E_RUN_REPORT.md  OPERATIONAL_RUNBOOKS.md  PATH_SECURITY.md  PRODUCTION_AUTH_CSRF.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_FIXES.md  QUERY_CACHING.md  README.md  REMAINING_ITEMS_SPRINTS.md  RENDER_IP_WHITELIST_GUIDE.md  RENDER_SETUP.md  RENDER_SETUP_CHECKLIST.md  RENDER_STRIPE_SETUP.md  SECRET_ROTATION.md  (+15 more)
infra/: README.md
investor-data-room/: README.md  export.py
investor-metrics/: README.md  export.py
jobhuntin-e2e-tests/: README-PRODUCTION-TESTS.md  README.md  package-lock.json  package.json  playwright.config.production.ts  playwright.config.ts  run-production-tests.bat  run-production-tests.sh  tsconfig.json
migrations/: 001_initial_schema.sql  002_onboarding_tables.sql  003_interview_sessions.sql  003_match_weights_config.sql  005_monitoring_tables.sql  006_resume_pdfs.sql  007_saved_jobs.sql  008_application_screenshots.sql  008_performance_indexes.sql  009_cache_connection_pools.sql  009_email_communications.sql  009_missing_indexes.sql  010_agent_improvements.sql  011_enhanced_notifications.sql  012_performance_monitoring.sql  013_application_pipeline_columns.sql  013_communication_system.sql  014_enhanced_performance.sql  015_performance_indexes.sql  016_additional_composite_indexes.sql  016_user_experience_features.sql  017_onboarding_sessions.sql  019_applications_notify_trigger.sql  019_user_experience.sql  020_database_performance.sql  021_missing_components_fix.sql  022_monitoring_tables.sql  023_caching_tables.sql  024_application_enhancements.sql  025_job_dead_letter_queue.sql  026_tenant_slug_job_external_id.sql  027_additional_composite_indexes.sql  029_match_scores_table.sql  031_jobspy_schema_columns.sql  032_applications_archive.sql  033_gdpr_requests.sql  034_contact_messages.sql  035_job_quality_fields.sql  036_companies_table.sql  037_analytics_tables.sql  (+6 more)
mobile/: app.json  eas.json  package-lock.json  package.json  store-listing.json
partners/: __init__.py
plans/: AUDIT_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  PHASES_6_9_COMPREHENSIVE_PLAN.md  system-architecture-audit.md
public/: sitemap.xml  sw.js
scripts/: add_profile_embeddings.py  analyze_sonar.py  apply_all_migrations.py  apply_migrations.py  apply_remediation.py  apply_render_migration.py  apply_security.py  brute_regions.py  brute_supabase.py  check_api_env.py  check_db.py  check_deploy_details.py  check_deploys.py  check_headers.py  check_jobspy_status.py  check_logs.py  check_ports.py  check_quality.py  code_review.py  create_blueprint.py  create_db.py  debug_application.py  debug_dns.py  fetch_supabase_config.py  find_all_todos.py  fix_onb.py  fix_sparkles.py  full-stack-audit.js  generate_secrets.py  get_region_host.py  get_seo_logs.py  get_supabase_info.py  init_db_schema.py  init_render_db.py  lint-python.sh  load_test.py  manage_render.py  migrate.py  migrate_to_render.py  parse_pooler.py  (+21 more)
shared/: README.md  __init__.py  ai_validation.py  alerting.py  api_auth_middleware.py  api_compression.py  api_error_handler.py  api_logger.py  api_pagination.py  api_rate_limiter.py  api_request_validator.py  api_response.py  api_response_cache.py  api_versioning.py  batch_loader.py  cache.py  cache_manager.py  cache_stampede_protection.py  cache_strategies.py  captcha.py  circuit_breaker.py  config.py  connection_pool.py  cost_monitoring.py  data_retention.py  db.py  db_backup_manager.py  db_capacity_planner.py  db_connection_monitor.py  db_connection_pool.py  (+56 more)
(+964 files in other folders)
