[project]
name = "sorce"
version = "0.3.0"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N", "C"]
ignore = [
    "E501",   # line length handled by formatter
    "N801",   # API versioning class names (JobSignalsResponse_V1)
    "N817",   # ElementTree as ET is standard practice
    "C901",   # complexity - core business logic functions legitimately complex
    "B008",   # FastAPI dependency injection pattern is acceptable
    "B904",   # Exception handling pattern is acceptable for this codebase
    "D102", "D101", "D103", "D107", "D100", "D104", "D105", "D106",  # Documentation handled separately
    "E402",   # Test imports and conditional imports are acceptable
    "SIM105",  # Exception suppression is acceptable in this codebase
    "B023",    # Loop variable usage in comprehensions is acceptable
    "C401",    # Generator expressions are acceptable
    "SIM114", "SIM117", "SIM103", "SIM910",  # Code style preferences
    "UP031",   # Printf formatting is acceptable in some cases
    "B007", "B018",  # Minor style issues
    "C416", "C420",  # Comprehension style preferences
    "N812", "N817", "N818",  # Naming conventions are acceptable
    "SIM110",   # Built-in reimplementation acceptable in some cases
    "F821",    # Test fixtures and conditional definitions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["api", "worker", "shared", "backend"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "playwright.*", "fitz.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a running database",
    "slow: marks tests that take a long time",
]
