[project]
name = "sorce"
version = "0.3.0"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N", "C"]
ignore = [
    "E501",   # line length handled by formatter
    "N801",   # API versioning class names (JobSignalsResponse_V1)
    "N817",   # ElementTree as ET is standard practice
    "C901",   # complexity - core business logic functions legitimately complex
    "B008",   # FastAPI dependency injection pattern is acceptable
    "B904",   # Exception handling pattern is acceptable for this codebase
    "D102", "D101", "D103", "D107", "D100", "D104", "D105", "D106",  # Documentation handled separately
    "E402",   # Test imports and conditional imports are acceptable
    "SIM105",  # Exception suppression is acceptable in this codebase
    "B023",    # Loop variable usage in comprehensions is acceptable
    "C401",    # Generator expressions are acceptable
    "SIM114", "SIM117", "SIM103", "SIM910",  # Code style preferences
    "UP031",   # Printf formatting is acceptable in some cases
    "B007", "B018",  # Minor style issues
    "C416", "C420",  # Comprehension style preferences
    "N812", "N817", "N818",  # Naming conventions are acceptable
    "SIM110",   # Built-in reimplementation acceptable in some cases
    "F821",    # Test fixtures and conditional definitions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["api", "worker", "shared", "backend"]

# ---------------------------------------------------------------------------
# isort (import sorting) - configured to be compatible with Black
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["api", "worker", "shared", "backend"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
allow_untyped_calls = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "playwright.*", "fitz.*"]
ignore_missing_imports = true

# Relax strict checks for modules with many pre-existing type issues
[[tool.mypy.overrides]]
module = [
    "api.*", "worker.*", "backend.*", "shared.*",
    "packages.backend.*", "apps.api.*", "apps.worker.*",
]
disable_error_code = [
    "union-attr", "arg-type", "call-arg", "assignment",
    "attr-defined", "misc", "no-any-return", "return-value",
    "index", "operator", "var-annotated", "dict-item",
    "valid-type", "no-redef", "call-overload",
    "import-untyped", "empty-body", "func-returns-value",
    "await-not-async", "list-item", "has-type", "override",
    "unused-coroutine", "name-defined", "syntax",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a running database",
    "slow: marks tests that take a long time",
]

# ---------------------------------------------------------------------------
# Bandit (security lint)
# ---------------------------------------------------------------------------
[tool.bandit]
# B608: Many false positives on logger.error("Failed to delete from...") - not SQL
# B108: /tmp paths are env-configurable in production; low risk for dev
# B313/B314: xml.etree used only in local dev SAML flow (no cert); prod uses signxml
# B311: random.random/uniform used for retry backoff jitter only, not crypto
# B112: try_except_continue used for optional OAuth provider handling
# B105: False positives on URLs (oauth endpoints) and string keys (push_token_registered)
# B403: pickle used for cache serialization; cache keys are internal
# B110: try_except_pass for optional JWT/session parsing; errors logged or acceptable
# B405: ElementTree; prod uses defusedxml per B313/B314
# B310: url open for file:/ in dev/test; prod uses env URLs
# B404,B603,B607: subprocess for ClamAV/system bins; inputs are controlled
# B106: 'postgres'/'your-secret-key' in test config and examples only
# B113: requests timeout; add in future
skips = [
    "B608", "B108", "B313", "B314", "B311", "B112", "B105", "B403", "B110",
    "B405", "B310", "B404", "B603", "B607", "B106", "B113",
]
exclude_dirs = ["tests", ".venv", "node_modules"]
